// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sort parameters tests Query with incorrect sort direction 1`] = `
"{
  search(
    q: \\"undefined\\"
    siteKeys: [\\"fake\\"]
    language: \\"fake\\"
    workspace: fake
    filters: {nodeType: {type: \\"fake\\"}}
  ) {
    results(size: 5, page: 0) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: \\"jcr:created\\")
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with incorrect sort field 1`] = `
"{
  search(
    q: \\"undefined\\"
    siteKeys: [\\"fake\\"]
    language: \\"fake\\"
    workspace: fake
    filters: {nodeType: {type: \\"fake\\"}}
  ) {
    results(size: 5, page: 0) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: \\"jcr:created\\")
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query with sort 1`] = `
"{
  search(
    q: \\"undefined\\"
    siteKeys: [\\"fake\\"]
    language: \\"fake\\"
    workspace: fake
    filters: {nodeType: {type: \\"fake\\"}}
  ) {
    results(size: 5, page: 0, sortBy: {dir: ASC, field: \\"jcr:title\\"}) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: \\"jcr:created\\")
      }
    }
  }
}
"
`;

exports[`Sort parameters tests Query without sort 1`] = `
"{
  search(
    q: \\"undefined\\"
    siteKeys: [\\"fake\\"]
    language: \\"fake\\"
    workspace: fake
    filters: {nodeType: {type: \\"fake\\"}}
  ) {
    results(size: 5, page: 0) {
      totalHits
      took
      hits {
        id
        link
        displayableName
        excerpt
        score
        created: property(name: \\"jcr:created\\")
      }
    }
  }
}
"
`;
